--- a/templates/_telegram_shop.html
+++ b/templates/_telegram_shop.html
@@ -2,7 +2,7 @@
     <div class="card">
         <div class="card-title mx-auto">
 
-            <a href="{{ url_for('edit_telegram_shop', telegram_shop_id=telegram_shop.id) }}" class="badge badge-pill badge-{% if telegram_shop%}{% if telegram_shop.shop.checked_by_admin%}success{% else %}danger{% endif %}{% else %}danger{% endif %}"> {{ telegram_shop.telegram_link }}</a>
+            <a href="{{ telegram_shop.telegram_link }}" class="badge badge-pill badge-{% if telegram_shop%}{% if telegram_shop.shop.checked_by_admin%}success{% else %}danger{% endif %}{% else %}danger{% endif %}"> {{ telegram_shop.telegram_link }}</a>
         </div>
         <div class="card-body">
             {% for region in telegram_shop.regions %}
