--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="form-row">
                     {% for region in form.regions %}
-                        <div class="col-3">
+                        <div class="col-sm-6 col-md-6 col-lg-4">
                             <div class="form-check">
                                 {{ region(class="form-check-input") }}
                                 {{ region.label(class="form-check-label") }}
