--- a/templates/_telegram_shop.html
+++ b/templates/_telegram_shop.html
@@ -7,7 +7,7 @@
         <div class="card-body">
             <div class="row">
                 {% for region in telegram_shop.regions %}
-                    {{ region.name }}
+                    <div class="col-md-12 col-lg-4">{{ region.name }}</div>
                 {% endfor %}
             </div>
             <div class="row">
