--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
         <div class="col-sm-4 mx-auto mt-5">
             <div class="card">
                 <article class="card-body">
-                    <h4 class="card-title mb-4 mt-1">Sign in</h4>
+                    <h4 class="card-title mb-4 mt-1">Ввойти</h4>
                     <form action="" method="post" novalidate>
                         {{ form.hidden_tag() }}
                         <div class="form-group">
@@ -13,7 +13,6 @@
                             {{ form.username(size=32, class_="form-control") }}
                         </div> <!-- form-group// -->
                         <div class="form-group">
-                            <a class="float-right" href="#">Forgot?</a>
                             {{ form.password.label }}<br>
                             {{ form.password(size=32, class_="form-control") }}
                         </div> <!-- form-group// -->
