--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
         <div class="col-sm-4 mx-auto mt-5">
             <div class="card">
                 <article class="card-body">
-                    <h4 class="card-title mb-4 mt-1">Ввойти</h4>
+                    <h4 class="card-title mb-4 mt-1">Войти</h4>
                     <form action="" method="post" novalidate>
                         {{ form.hidden_tag() }}
                         <div class="form-group">
