--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -45,7 +45,9 @@
                         {{ form.hide.label(class="form-check-label") }}
                     </div>
                 </div>
+            <hr>
                 {{ form.submit(class_="btn btn-success") }}
+            <hr class="my-3">
             </form>
         </div>
     </div>
