--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -46,7 +46,10 @@
                     </div>
                 </div>
             <hr>
+            <div class="row">
                 {{ form.submit(class_="btn btn-success") }}
+                <div class="col-6"><a href="{{ url_for('delete', telegram_id=telegram_shop.id) }}" class="btn btn-danger">Удалить</a></div>
+            </div>
             <hr class="my-3">
             </form>
         </div>
