--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -49,6 +49,7 @@
             <div class="row">
                 {{ form.submit(class_="btn btn-success") }}
                 <div class="col-6"><a href="{{ url_for('delete', telegram_id=telegram_shop.id) }}" class="btn btn-danger">Удалить</a></div>
+                <div class="col-6"><a href="{{ url_for('publish', telegram_id=telegram_shop.id) }}" class="btn btn-info">Опубликувати</a></div>
             </div>
             <hr class="my-3">
             </form>
