--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -47,9 +47,9 @@
                 </div>
             <hr>
             <div class="row">
-                {{ form.submit(class_="btn btn-success") }}
-                <div class="col-6"><a href="{{ url_for('delete', telegram_id=telegram_shop.id) }}" class="btn btn-danger">Удалить</a></div>
-                <div class="col-6"><a href="{{ url_for('publish', telegram_id=telegram_shop.id) }}" class="btn btn-info">Опубликувати</a></div>
+                <div class="col-3">{{ form.submit(class_="btn btn-success") }}</div>
+                <div class="col-3"><a href="{{ url_for('delete', telegram_id=telegram_shop.id) }}" class="btn btn-danger">Удалить</a></div>
+                <div class="col-3"><a href="{{ url_for('publish', telegram_id=telegram_shop.id) }}" class="btn btn-info">Опубликувати</a></div>
             </div>
             <hr class="my-3">
             </form>
