--- a/templates/_statistic.html
+++ b/templates/_statistic.html
@@ -1,12 +1,10 @@
-<div class="col-3 mx-auto">
-    <div class="row">
-        <ul class="list-group">
-            {% for region in regions %}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                    {{ region.region }}
-                    <span class="badge badge-primary badge-pill">{{ region.count }}</span>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+<div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+    <ul class="list-group">
+        {% for region in regions %}
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                {{ region.region }}
+                <span class="badge badge-primary badge-pill">{{ region.count }}</span>
+            </li>
+        {% endfor %}
+    </ul>
 </div>
