--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -45,13 +45,11 @@
                         {{ form.hide.label(class="form-check-label") }}
                     </div>
                 </div>
-            <hr>
-            <div class="row">
-                <div class="col-3">{{ form.submit(class_="btn btn-success") }}</div>
-                <div class="col-3"><a href="{{ url_for('delete', telegram_id=telegram_shop.id) }}" class="btn btn-danger">Удалить</a></div>
-                <div class="col-3"><a href="{{ url_for('publish', telegram_id=telegram_shop.id) }}" class="btn btn-info">Опубликувати</a></div>
-            </div>
-            <hr class="my-3">
+                <hr>
+                {{ form.submit(class_="btn btn-success") }}
+                <a href="{{ url_for('delete', telegram_id=telegram_shop.id) }}" class="btn btn-danger">Удалить</a>
+                <a href="{{ url_for('publish', telegram_id=telegram_shop.id) }}" class="btn btn-info">Опубликувати</a>
+                <hr class="my-3">
             </form>
         </div>
     </div>
